# scratchpad

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  glasscat-mime.xml  scratchpad-ui.xml  scratchpad.desktop  scratchpad.schemas
data/16x16/: scratchpad.xcf.bz2
libguniqueapp/: Makefile.am  guniqueapp-bacon.c  guniqueapp-bacon.h  guniqueapp-base.c  guniqueapp-base.h  guniqueapp-dbus.c  guniqueapp-dbus.h  guniqueapp-marshal.list  guniqueapp.c  guniqueapp.h  guniqueapp.xml
scratchpad/: Makefile.am  application.vala  basewindow.vala  bufferlist.vala  document.vala  documentview.vala  documentwindow.vala  metadata.vala  project.vala  projecttree.vala  projectwindow.vala  searchentry.vala  settings.vala  uimanager.vala
vapi/: Makefile.am  misc-utils.vapi
